load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python:defs.bzl", "py_library")

exports_files([
    "pylint_runner.py",
])

py_library(
    name = "pylint_runner",
    srcs = ["pylint_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/pylint:current_py_pylint_toolchain",
        "//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/pylint:__subpackages__"],
    deps = [
        "//python:bzl_lib",
        "//python/private:bzl_lib",
        "//python/venv:bzl_lib",
    ],
)
